# ny_workspace

./: .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml
frontend/: .env  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ComboSearchBox.jsx  CurrentWeather.jsx  ForcastWeather.jsx  MongoDB.jsx  WebSocket.jsx
frontend/src/data/: APIs.js
frontend/src/pages/: Home.jsx  LocalWeather.jsx
frontend/src/utilities/: CryptoTools.js
jpmc/: .env  package-lock.json  package.json
jpmc/src/: App.js  index.js
jpmc/src/components/: CoinSelect.js  CoinsTable.js  CurrentWeather.js  ForcastWeather.js  Navbar.js
jpmc/src/pages/: Home copy.js  Home.js  Starred.js  Study.js
jpmc/src/utilities/: test.js
