[tool.poetry]
name = "ny-proj"
version = "0.1.0"
description = "found in 20231212"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ny_proj"}]

[tool.poetry.dependencies]
python = "^3.10"
finnhub-python = "^2.4.19"
pandas = "^2.1.4"
websockets = "^12.0"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
pip = "^23.3.1"
install = "^1.3.5"
python-okx = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
